fix a recipe bug regarding the wrapping paper items

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: true
 contact_links:
   - name: Discuss Chocolate Bar on the Discord server.
     url: https://discord.gg/SN89y7EQTN
-    about: Discuss bug reports, suggestions or other AE related stuff on our Discord server.
+    about: Discuss bug reports, suggestions or other Chocolate Bar related stuff on our Discord server.
