--- a/src/main/resources/data/chocolate_bar/recipes/quilty_wrapping_paper.json
+++ b/src/main/resources/data/chocolate_bar/recipes/quilty_wrapping_paper.json
@@ -16,7 +16,7 @@
     }
   ],
   "result": {
-    "item": "chocolatebar:quilty_wrapping_paper",
+    "item": "chocolate_bar:quilty_wrapping_paper",
     "count": 1
   }
 }
