--- a/src/main/resources/data/chocolate_bar/recipes/toolchain_wrapping_paper.json
+++ b/src/main/resources/data/chocolate_bar/recipes/toolchain_wrapping_paper.json
@@ -19,7 +19,7 @@
     }
   ],
   "result": {
-    "item": "chocolatebar:toolchain_wrapping_paper",
+    "item": "chocolate_bar:toolchain_wrapping_paper",
     "count": 1
   }
 }
